# Chip-8-Emulator

./: .gitignore  README
src/: CMakeLists.txt
src/chip8emu/: CMakeLists.txt  chip8emu.c  chip8emu.h  chip8emulator.c  display.c  display.h  keyboard.c  keyboard.h
src/disassembler/: CMakeLists.txt  chip8disasm.c  chip8disasm.h  disassembler.c  main.c  opcodes.h
src/utility/: CMakeLists.txt  utility.c  utility.h
testroms/: instruction_test.ch8
